java-plugin/src/test/cases/error/ConstMethod2-15-15.java
import io.github.miracelwhipp.constness.annotation.Const;


class ConstMethod {

    private int field;

    public void method() {

    }

    @Const
    public void constMethod() {

        method();
    }
}
